--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Individual Web Dev Skills</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
     <h3><%= skill.skill %></h3>
     <h3>Skill Acquired: <%= skill.acquired ? 'Yes' : 'No' %></h3>
+    <form action="/skills/<%= skill.id %>?_method=DELETE" method="POST" class="delete-form">
+      <button type="submit">Delete Skill</button>
+    </form>
   </body>
   
 </html>
